--- a/_data/tasks.yml
+++ b/_data/tasks.yml
@@ -17,3 +17,48 @@
   description: Create a blog about history of Robotics to display on ACICTS BLOGS.
   pdfURL: 001D1
   category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
+  
+- caption: Write a blog
+  description: Create a blog about history of Robotics to display on ACICTS BLOGS.
+  pdfURL: 001D1
+  category: Explore
