--- a/_data/leaderboard.yml
+++ b/_data/leaderboard.yml
@@ -1,59 +1,8 @@
-- name: John Cena
+- name: Student 1
   class: 10-6
   marks: 100
 
-- name: John Cena
-  class: 10-6
-  marks: 100
+- name: Student 2
+  class: 6-6
+  marks: 30
 
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
-
-- name: John Cena
-  class: 10-6
-  marks: 100
