--- a/_data/tasks.yml
+++ b/_data/tasks.yml
@@ -1,74 +1,95 @@
 - caption: Getting familiar with VCS
   description: Write a blog post about Version Control System (VCS)
   pdfURL: 
+  submitURL: 
   category: Explore
 
 - caption: Getting started guide for Bits
   description: Create a Getting started guide for new Bits participants
   pdfURL: 
+  submitURL: 
   category: Explore
 
 - caption: presentation about Google Code-In
   description: Create a presentation about Google Code-In contest
   pdfURL: 
+  submitURL: 
   category: Explore
 
 - caption: Find a bug 
   description: Find bugs in Bits 2020 website
   pdfURL: 
+  submitURL: 
   category: Explore
 
 - caption: Make a project proposal 
   description: Make a project proposal for an app idea
   pdfURL: 
+  submitURL: 
   category: Explore
 
 - caption: Make a portfolio website
   description: Make a portfolio website using HTML and CSS And host it on github pages
   pdfURL: 
+  submitURL: 
   category: Code  
 
 - caption: Make a calculator
   description: Make a basic calculator using scratch
   pdfURL: 
+  submitURL: 
   category: Code 
 
 - caption: Introduction to github
   description: Introduce yourself to github
   pdfURL: 
+  submitURL: 
   category: Code 
 
 - caption: Create an AI
   description: Create and Artificial Intelligence that answers pre-coded questions in CLI
   pdfURL: 
+  submitURL: 
   category: Code 
 
 - caption: Machine learning for identify a object
   description:  Train a ML AI to identify a mobile phone
   pdfURL: 
+  submitURL: 
   category: Code 
 
 - caption: Design a logo
   description:  Design a logo for Bits 2021
   pdfURL: 
+  submitURL: 
   category: Design
 
 - caption: Design swag items for ACICTS
   description:  Design a T-shirt, Cap, Pen and a sticker design for Ananda College ICT society
   pdfURL: 
+  submitURL: 
   category: Design
 
 - caption: Create a animated video
   description:  Create a short animated video about cyber crimes
   pdfURL: 
+  submitURL: 
   category: Design
 
 - caption: Design a flyer for PULZ
   description:  Design a promotion flyer for PULZ 2020
   pdfURL: 
+  submitURL: 
   category: Design
 
 - caption: Make a frame-by-frame animated video clip
   description:  Make a frame by frame stickman character video clip 
   pdfURL: 
+  submitURL: 
   category: Design
+
+- caption: 
+  description:  
+  pdfURL: 
+  submitURL: 
+  category: 
