Update task errors

--- a/_data/tasks.yml
+++ b/_data/tasks.yml
@@ -5,7 +5,7 @@
   category: Code
 
 - caption: Make a calculator
-  description: Make a portfolio website using HTML and CSS And host it on github pages
+  description: Make a basic calculator using a programming language of your choice
   pdfURL: https://drive.google.com/file/d/1WmLow2BQuvZYlM-kmy6DWJtrQ-rdwOgI/view?usp=sharing
   submitURL: https://docs.google.com/forms/d/e/1FAIpQLSfzdy5aUI-wzFHQZSY4NPoaYbWcLckzNTdNUMLV5SHTjVRHcQ/viewform?usp=sf_link
   category: Code
