--- a/_data/onlinetest.yml
+++ b/_data/onlinetest.yml
@@ -1,58 +1,50 @@
 - caption: Online Test 1
-  date: Thursday June 4th
-  time: 5.00 PM
-  age: Grade 6-9
-  URL: 
-  category: Online Test
+  date: 14th June
+  time: 8.00 AM - 8.00 PM
+  age: Grade 6-8
+  URL: https://timify.me/form/QkVrUHmgZPyWDx9R
 
 - caption: Online Test 1
-  date: Thursday June 4th
-  time: 5.00 PM
+  date: 14th June
+  time: 8.00 AM - 8.00 PM
   age: Grade 9-11
-  URL: 
-  category: Online Test
+  URL: https://timify.me/form/D1942TIKBtiaotVS
 
 - caption: Online Test 2
-  date: Thursday June 4th
-  time: 5.00 PM
-  age: Grade 6-9
+  date: 21st June
+  time: 8.00 AM - 8.00 PM
+  age: Grade 6-8
   URL: 
-  category: Online Test
 
 - caption: Online Test 2
-  date: Thursday June 4th
-  time: 5.00 PM
+  date: 21st June
+  time: 8.00 AM - 8.00 PM
   age: Grade 9-11
   URL: 
-  category: Online Test
 
 - caption: Online Test 3
-  date: Thursday June 4th
-  time: 5.00 PM
-  age: Grade 6-9
+  date: 28th June
+  time: 8.00 AM - 8.00 PM
+  age: Grade 6-8
   URL: 
-  category: Online Test
 
 - caption: Online Test 3
-  date: Thursday June 4th
-  time: 5.00 PM
+  date: 28th June
+  time: 8.00 AM - 8.00 PM
   age: Grade 9-11
   URL: 
-  category: Online Test
 
 - caption: Online Test 4
-  date: Thursday June 4th
-  time: 5.00 PM
-  age: Grade 6-9
+  date: 05th July
+  time: 8.00 AM - 8.00 PM
+  age: Grade 6-8
   URL: 
-  category: Online Test
 
 - caption: Online Test 4
-  date: Thursday June 4th
-  time: 5.00 PM
+  date: 05th July
+  time: 8.00 AM - 8.00 PM
   age: Grade 9-11
   URL: 
-  category: Online Test
 
 
 
