--- a/_data/onlinetest.yml
+++ b/_data/onlinetest.yml
@@ -1,14 +1,14 @@
-- caption: Online Test 1
+- caption: Online Test 1 (EXPIRED)
   date: 14th June
   time: 8.00 AM - 8.00 PM
   age: Grade 6-8
-  URL: https://timify.me/form/QkVrUHmgZPyWDx9R
+  URL: 
 
-- caption: Online Test 1
+- caption: Online Test 1 (EXPIRED)
   date: 14th June
   time: 8.00 AM - 8.00 PM
   age: Grade 9-11
-  URL: https://timify.me/form/D1942TIKBtiaotVS
+  URL: 
 
 - caption: Online Test 2
   date: 21st June
