--- a/_data/leaderboard.yml
+++ b/_data/leaderboard.yml
@@ -1,4 +1,4 @@
-- name: Thusal06
+- name: Thusal Ranawaka
   class: 09-11
   marks: 196
   index: 1
@@ -8,99 +8,99 @@
   marks: 167
   index: 2
 
-- name: Sasvidu 
+- name: Sasvidu Ranthul
   class: 09-01
   marks: 153
   index: 3
 
+- name: Lithira Mendis
+  class: 08-09
+  marks: 144
+  index: 4
+
 - name: Manuth Ranawaka
   class: 07-09
   marks: 143
-  index: 4
+  index: 5
 
-- name: Anupama
+- name: Anupama Dissanayake
   class: 10-04
   marks: 135
-  index: 5
+  index: 6
 
 - name: Thulina Perera
   class: 11-05
   marks: 134
-  index: 6
+  index: 7
 
 - name: Inuka Batawala
   class: 09-02
   marks: 128
-  index: 7
+  index: 8
+
+- name: Senura Ratnayake
+  class: 08-11
+  marks: 125
+  index: 9
 
 - name: Dinath Fernando
   class: 08-09
   marks: 115
-  index: 8
+  index: 10
 
 - name: Nimsandu Kottage
   class: 10-10
   marks: 109
-  index: 9
+  index: 11
 
 - name: Lithika Methsilu
   class: 08-04
   marks: 108
-  index: 10
-
-- name: Thulana
+  index: 12
+  
+- name: Thulana Vithanage
   class: 09-02
   marks: 100
-  index: 11
-
-- name: Vidul.H.B
+  index: 13
+  
+- name: Vidul Batawala
   class: 07-07
   marks: 99
-  index: 12
+  index: 14
 
 - name: Onija Nethsara
   class: 09-11
   marks: 86
-  index: 13
+  index: 15
 
 - name: Didula Dinoj
   class: 11-09
   marks: 85
-  index: 14
+  index: 16
 
 - name: Ramiru Ariyaratne
   class: 10-04
-  marks: 77
-  index: 15
+  marks: 77 
+  index: 17
 
 - name: Janith Kaushalya
   class: 08-03
   marks: 75
-  index: 16
+  index: 18
 
 - name: Parinda Pathirana
   class: 08-01
-  marks: 70 
-  index: 17
+  marks: 70
+  index: 19
 
 - name: Sadev Herath
   class: 08-04
   marks: 55
-  index: 18
+  index: 20
 
 - name: Dulkith Induwana
   class: 06-04
   marks: 45
-  index: 19
-
-- name: Lithira Mendis
-  class: 08-09
-  marks: 44
-  index: 20
-
-- name: Senura
-  class: 08-11
-  marks: 30
   index: 21
 
 - name: Chandupa Weerakkody
