--- a/_data/leaderboard.yml
+++ b/_data/leaderboard.yml
@@ -88,7 +88,7 @@
   marks: 75
   index: 18
 
-- name: Parinda Pathirana
+- name: Tharusha Aloka
   class: 08-01
   marks: 70
   index: 19
@@ -97,43 +97,48 @@
   class: 08-04
   marks: 55
   index: 20
-
+  
+- name: Pulindu Perera
+  class: 09-02
+  marks: 53
+  index: 21
+  
 - name: Dulkith Induwana
   class: 06-04
   marks: 45
-  index: 21
+  index: 22
 
 - name: Chandupa Weerakkody
   class: 11-06
   marks: 24
-  index: 22
+  index: 23
 
 - name: Lithum Adhikari
   class: 08-11
   marks: 24 
-  index: 22
+  index: 23
 
 - name: Isara Umayantha
   class: 07-09
   marks: 18
-  index: 24
+  index: 25
 
 - name: Nisal Thejana
   class: 08-09
   marks: 15
-  index: 25
+  index: 26
 
 - name: Thenul Chamikara
   class: 11-06
   marks: 14
-  index: 26
+  index: 27
 
 - name: Yasiru Jayasinghe
   class: 10-03
   marks: 13
-  index: 27
+  index: 28
 
 - name: Sandul Gunarathne
   class: 08-09
   marks: 5
-  index: 28
+  index: 29
