--- a/_data/onlinetest.yml
+++ b/_data/onlinetest.yml
@@ -14,13 +14,13 @@
   date: 21st June
   time: 8.00 AM - 8.00 PM
   age: Grade 6-8
-  URL: 
+  URL: https://timify.me/form/N0gM7ryPGf6e578l
 
 - caption: Online Test 2
   date: 21st June
   time: 8.00 AM - 8.00 PM
   age: Grade 9-11
-  URL: 
+  URL: https://timify.me/form/5naZqbmvC0Wjwtqi
 
 - caption: Online Test 3
   date: 28th June
