--- a/_data/leaderboard.yml
+++ b/_data/leaderboard.yml
@@ -1,19 +1,19 @@
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: sdfds
+  class: fdsf
+  tasks: dsfds
+  marks: fds
   index: 1
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: dsfds
+  class: fdsf
+  tasks: fddfs
+  marks: df
   index: 2
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: dsf
+  class: sddsf
+  tasks: fdfs
+  marks: df 
   index: 3
 
 - name: 
