--- a/_data/leaderboard.yml
+++ b/_data/leaderboard.yml
@@ -1,264 +1,257 @@
-- name: sdfds
-  class: fdsf
-  tasks: dsfds
-  marks: fds
+- name: Thusal Ranawaka
+  class: 09-11
+  tasks: 29
+  marks: 839
   index: 1
 
-- name: dsfds
-  class: fdsf
-  tasks: fddfs
-  marks: df
+- name: Inuka Batawala
+  class: 09-02
+  tasks: 20
+  marks: 808
   index: 2
 
-- name: dsf
-  class: sddsf
-  tasks: fdfs
-  marks: df 
+- name: Pasindu Yahampath
+  class: 11-04
+  tasks: 22
+  marks: 801
   index: 3
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Thulina Perera
+  class: 11-05
+  tasks: 28
+  marks: 765
   index: 4
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Senura Ratnayake
+  class: 08-11
+  tasks: 26
+  marks: 675
   index: 5
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Vidul Batawala
+  class: 07-07
+  tasks: 24
+  marks: 582
   index: 6
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Nimsandu Kottage
+  class: 10-10
+  tasks: 24
+  marks: 561
   index: 7
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Nethula Peiris
+  class: 09-08
+  tasks: 16
+  marks: 527
   index: 8
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Lithira Mendis
+  class: 08-09
+  tasks: 14
+  marks: 490
   index: 9
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Anupama Dissanayake
+  class: 10-04
+  tasks: 12
+  marks: 461
   index: 10
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Sasvidu Ranthul
+  class: 09-01
+  tasks: 7
+  marks: 414
   index: 11
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Lithika Methsilu
+  class: 08-04
+  tasks: 7
+  marks: 396
   index: 12
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Dinath Fernando
+  class: 08-09
+  tasks: 7
+  marks: 361
   index: 13
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Didula Dinoj
+  class: 11-09
+  tasks: 4
+  marks: 336
   index: 14
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Harshana Gunawansa
+  class: 10-03
+  tasks: 12
+  marks: 325
   index: 15
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Manuth Ranawaka
+  class: 07-09
+  tasks: 17
+  marks: 307
   index: 16
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Sudhira Jayatillaka
+  class: 10-04
+  tasks: 7
+  marks: 301
   index: 17
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Thulana Vithanage
+  class: 09-02
+  tasks: 1
+  marks: 298
   index: 18
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Tharusha Aloka
+  class: 08-01
+  tasks: 0
+  marks: 265
   index: 19
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Onija Nethsara
+  class: 09-11
+  tasks: 6
+  marks: 252
   index: 20
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Pasindu Dushan
+  class: 10-07
+  tasks: 10
+  marks: 246
   index: 21
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Thushan Senanayake
+  class: 10-04
+  tasks: 6
+  marks: 191
   index: 22
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Pulindu Perera
+  class: 09-02
+  tasks: 1
+  marks: 137
   index: 23
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Lithum Adhikari
+  class: 08-11
+  tasks: 10
+  marks: 128
   index: 24
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Sasanka lochana
+  class: 11-10
+  tasks: 4
+  marks: 116
   index: 25
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Janith Kaushalya
+  class: 08-03
+  tasks: 0
+  marks: 110
   index: 26
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Thenul Chamikara
+  class: 11-06
+  tasks: 2
+  marks: 99
   index: 27
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Tharinda Dinujaya
+  class: 10-04
+  tasks: 6
+  marks: 94
   index: 28
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Ramiru Ariyaratne
+  class: 10-04
+  tasks: 0
+  marks: 77
   index: 29
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Sadev Herath
+  class: 08-04
+  tasks: 1
+  marks: 55
   index: 30
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
-  index: 31
+- name: Dinew methviru
+  class: 08-05
+  tasks: 0
+  marks: 55
+  index: 30
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Senuda Savinjith
+  class: 08-04
+  tasks: 0
+  marks: 50
   index: 32
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Dulkith Induwana
+  class: 06-04
+  tasks: 0
+  marks: 45
   index: 33
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
-  index: 34
+- name: Visith Jayawardana
+  class: 10-10
+  tasks: 0
+  marks: 45
+  index: 33
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Isara Umayantha
+  class: 07-09
+  tasks: 3
+  marks: 28
   index: 35
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Chandupa Weerakkody
+  class: 11-06
+  tasks: 2
+  marks: 24
   index: 36
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Nisal Thejana
+  class: 08-09
+  tasks: 2
+  marks: 22
   index: 37
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Thisuka Jayaratne
+  class: 11-03
+  tasks: 2
+  marks: 20
   index: 38
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Anuja Nadun
+  class: 07-03
+  tasks: 0
+  marks: 15
   index: 39
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Yasiru Jayasinghe
+  class: 10-03
+  tasks: 1
+  marks: 13
   index: 40
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
-  index: 41
+- name: Lehan Munasinghe
+  class: 09-06
+  tasks: 1
+  marks: 13
+  index: 40
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Migara Bhanu
+  class: 08-09
+  tasks: 1
+  marks: 10
   index: 42
 
-- name: 
-  class: 
-  tasks: 
-  marks: 
+- name: Sandul Gunarathne
+  class: 08-09
+  tasks: 1
+  marks: 5
   index: 43
-
-- name: 
-  class: 
-  tasks: 
-  marks: 
-  index: 44
-
